style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: sans-serif;
}

.desktop-banner {
  display: block;
  max-width: 100%;
  position: absolute;
  top: 0;
  z-index: -10;
}

.tablet-banner {
  display: none;
  position: absolute;
  top: 0;
  z-index: -10;
}

.mobile-banner {
  display: none;
  position: absolute;
  top: 0;
  z-index: -10;
}

nav {
  position: relative;
  display: flex;
  padding: 0 25px;
  padding-top: 60px;
  justify-content: space-between;
}

.nav-links {
  display: none;
}

.btn-contact {
  width: 100px;
  font-size: 13px;
  font-weight: 600;
  background-color: #b9f2a1;
  padding: 8px;
  border-radius: 10px;
  border: none;
  outline: none;
}

@media screen and (max-width: 1024px) {
  .desktop-banner {
    display: none;
  }

  .tablet-banner {
    display: block;
    max-width: 100%;
  }
}

@media screen and (max-width: 428px) {
  .tablet-banner {
    display: none;
  }

  .mobile-banner {
    display: block;
    max-width: 100%;
  }
}

@media screen and (min-width: 730px) {
  .nav-links {
    display: flex;
    list-style-type: none;
    gap: 24px;
  }

  .nav-links li a {
    text-decoration: none;
    color: #fff;
    font-weight: 500;
    font-size: 1.125rem;
  }

  .nav-links li a:hover {
    color: #b9f2a1;
  }

  .ham-icon {
    display: none;
  }
}

